<resources>
    <string name="app_name">BankChain</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_api_key">Bunq API key</string>
    <string name="pref_api_key_summ">Enter your Bunq API key</string>
    <string name="pref_bunq_title">Bunq</string>
    <string name="pref_keys">Keys</string>
    <string name="pref_public_key_summ">Enter your public key</string>
    <string name="pref_public_key">Public key</string>
    <string name="pref_private_key_summ">Enter your private key</string>
    <string name="pref_private_key">Private key</string>
    <string name="menu_refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="new_verification">New verification</string>
    <string name="public_key">Public key</string>
    <string name="iban">IBAN</string>
    <string name="verify">Verify</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="verify_bunq">Bunq Verification</string>
    <string name="verify_manual">Manual Verification</string>
    <string name="verify_challenge">Recieved Challenge</string>
    <string name="respond">Respond</string>

</resources>
