<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/verificationImage"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/app_name"
            android:scaleType="center" />

        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/verificationImage"
            android:layout_alignLeft="@+id/verificationImage"
            android:layout_alignRight="@+id/verificationImage"
            android:layout_alignTop="@+id/verificationImage"
            android:layout_margin="1dp"
            android:gravity="center"
            android:text="@string/new_verification"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/publicKeyInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/public_key"
        android:inputType="text" />

    <EditText
        android:id="@+id/ibanInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/iban"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"></Button>

        <Button
            android:id="@+id/verifyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verify"></Button>
    </LinearLayout>

</LinearLayout>